Fix styles of various pages on mobile
Thumbnails were over-flowing columns and the nav-bars are better suited
to dual-columns on mobile formats

--- a/ratbot/static/app.css
+++ b/ratbot/static/app.css
@@ -23,7 +23,7 @@ footer p {
 }
 
 nav {
-    padding: 30px 0;
+    padding: 20px 0 10px 0;
 }
 
 nav div {
@@ -60,7 +60,6 @@ section#comics h2 {
 }
 
 .comic img {
-    max-width: 200px;
     max-height: 300px;
 }
 
